<resources>
    <string name="app_name">Sabi Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="alarm_down_arrow">show</string>
    <string name="alarm_up_arrow">hide</string>
    <string name="delete_alarm">Delete</string>
    <string name="repeat">Repeat</string>
    <string name="vibration">Vibrate</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sound_file_check_description">Check</string>
    <string name="default_sound_file_name">beethoven_no5_1st.mp3</string>
    <string name="channel_id">sabi_alarms</string>
    <string name="channel_name">Running alarms</string>
    <string name="channel_description">launch sabi_alarm in background</string>
    <string name="sound_start_label">Start time:</string>
    <string name="test_play_label">Play</string>
    <string name="local_sound">Your sounds</string>
    <string name="default_sound">Device sounds</string>
    <string name="add_local_sound">Add new</string>
    <string name="sabi_detect">Sabi</string>
    <string name="delete_button_description">Delete</string>
    <string name="sound_play_button_description">Play</string>
    <string name="sound_stop_button_description">Stop</string>
    <string name="sound_stop_text">STOP!</string>
    <string name="snooze_label">min snooze</string>
    <string name="snooze">Snooze</string>
    <string name="alarm_sort_setting_label">Alarms sort order</string>
    <string name="sound_sort_setting_label">Sounds sort order</string>
    <string name="sound_finish_action_setting_label">When the sound ends</string>
    <string name="stop_sound_time_setting_label">Silence after</string>
    <string name="snooze_time_setting_label">Snooze length</string>
    <string name="github_link_label">Github</string>
    <string name="stop_alarm_toast_label">Alarm stopped</string>
    <string name="delete_alarm_snackbar_label">Alarm deleted</string>
    <string name="undo_delete_alarm_snackbar_label">UNDO</string>
    <string name="set_alarm_toast_label">Alarm set</string>
</resources>
